--- a/index.html
+++ b/index.html
@@ -9,15 +9,13 @@
 </head>
 <body>
     <header>
-    <nav>
-        <a href="#"><i class="fa fa-fw fa-home"></i> Home</a>
-        <a href="#"><i class="fa fa-image"></i> Documentary</a>
-
-    </nav>
-    <div>
-        <img src="logo.png">
-    </div>
+        <nav>
+            <a href="#"><i class="fa fa-fw fa-home"></i> Home</a>
+            <a href="#"><i class="fa fa-image"></i> Documentary</a>
+        </nav>
+        <div>
+            <img src="logo.png" alt="Company Logo">
+        </div>
     </header>
 </body>
 </html>
-                                                                         
