--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+        <div class="banner">Company</div>
         <nav>
             <a href="#"><i class="fa fa-fw fa-home"></i> Home</a>
             <a href="#"><i class="fa fa-image"></i> Documentary</a>
