--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <a href="#"><i class="fa fa-fw fa-home"></i> Home</a>
             <a href="#"><i class="fa fa-image"></i> Documentary</a>
         </nav>
-        <div>
-            <img src="logo.png" alt="Company Logo">
+        <div class="logo-container">
+            <img src="dan_yap_logo.jpg" alt="Company Logo">
         </div>
     </header>
 </body>
