--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <nav>
             <a href="#"><i class="fa fa-fw fa-home"></i> Home</a>
             <a href="#"><i class="fa fa-image"></i> Documentary</a>
+            <a href="#"><i class="fa fa-info-circle"></i> About</a>
+            <a href="#"><i class="fa fa-credit-card"></i> Credits</a>
         </nav>
         <div class="logo-container">
             <img src="dan_yap_logo.jpg" alt="Company Logo">
